# pC_SAC_G2

./: AUTORSHIP.md  CMakeLists.txt  README.md
eigen-3.4.0/share/pkgconfig/: eigen3.pc
include/: CMakeLists.txt  MTexample.cpp  XYEigen.cpp  XYEigen.h  XYEnsemble.cpp  XYEnsemble.h  XYFile.cpp  XYFile.h  XYLapack.cpp  XYLapack.h  XYMath.cpp  XYMath.h  XYMatrix.h  XYOctree.cpp  XYOctree.cpp.bak  XYOctree.h  XYOctree.h.bak  XYPDB.cpp  XYPDB.h  XYPDBAtom.cpp  XYPDBAtom.h  XYPoint3D.h  XYSIS.cpp  XYSIS.h  XYSIS_multi.cpp  XYSIS_multi.h  XYSIS_old.cpp  XYSO3Sequence.cpp  XYSO3Sequence.h  XYUtility.cpp  XYUtility.h  XYVector.h  octree.cpp  octree.h  tags  tmtags  tree.hh
input_generation/: 01.generate_data.sh  generate_data.py  pcSAC_execute_main_wrap.ipynb
input_generation/src/: README  __init__.py  correlation.py  ctcf.py  globals.py  mainFunctions_run.ipynb  rcmc_notebook.ipynb  reconstruct.py  submatrices.py  utils.py
script/data/ENm008/: Nature_2010_5CFrequencyCountsMatrix_ENm008_GM12878.txt  Nature_2010_5CFrequencyCountsMatrix_ENm008_K562.txt  Nature_2010_5CResultAndModelAnalysis.txt  Nature_2010_ContactMap_ENm008_GM12878.txt  Nature_2010_ContactMap_ENm008_GM12878_BED.txt  Nature_2010_ContactMap_ENm008_K562.txt  Nature_2010_ContactMap_ENm008_K562_BED.txt  README.txt  extractStartEnd.sh
script/test_GM12878/test_101323/: 00000001.pts  00000002.pts  00000003.pts  00000004.pts  00000005.pts  00000006.pts  00000007.pts  00000008.pts  00000009.pts  00000010.pts  00000011.pts  00000012.pts  00000013.pts  00000014.pts  00000015.pts  00000016.pts  00000017.pts  00000018.pts  00000019.pts  00000020.pts  00000021.pts  00000022.pts  00000023.pts  00000024.pts  00000025.pts  00000026.pts  00000027.pts  00000028.pts  00000029.pts  00000030.pts  00000031.pts  00000032.pts  00000033.pts  00000034.pts  00000035.pts  00000036.pts  00000037.pts  00000038.pts  00000039.pts  00000040.pts  (+10 more)
script/test_GM12878/test_101323_2/: 00000001.pts  00000002.pts  00000003.pts  00000004.pts  00000005.pts  00000006.pts  00000007.pts  00000008.pts  00000009.pts  00000010.pts  00000011.pts  00000012.pts  00000013.pts  00000014.pts  00000015.pts  00000016.pts  00000017.pts  00000018.pts  00000019.pts  00000020.pts  00000021.pts  00000022.pts  00000023.pts  (+27 more)
script/test_exp_data/: downsample_matrix_GM12878-HRC.txt  int_mat_seg_len_GM12878-HRC.txt  interaction_matrix_GM12878-HRC.txt  lr_downsample_matrix_GM12878-HRC.txt  test.chain.conf  whole_matrix_GM12878-HRC.txt
script/test_toy/: int_mat_seg_len.txt  interaction_matrix.txt  test.conf
src/: CMakeLists.txt  chromatin.sis.coarse.cpp  ensemble.cpp  test.octree.cpp
(+222 files in other folders)
